# aa-pak-track

./: .coveragerc  .isort.cfg  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: automated-checks.yml
paktrack/: __init__.py  apps.py  auth_hooks.py  urls.py  views.py
paktrack/templates/paktrack/: base.html  index.html
testauth/settings/: local.py
