[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling",
]

[project]
name = "aa-pak-track"
description = "PAK Tracker for Alliance Auth"
readme = "README.md"
keywords = [
    "allianceauth",
    "paktrack",
]
license = { file = "LICENSE" }
authors = [
    { name = "Elvin Bajric", email = "elvinbaj@proton.me" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [
    "version",
]
dependencies = [
    "allianceauth>=4.3.1,<5",
]
urls.Changelog = "https://github.com/ppfeufer/aa-example-plugin/blob/master/CHANGELOG.md"
urls.Tracker = "https://github.com/ppfeufer/aa-example-plugin/issues"

[tool.hatch.version]
path = "paktrack/__init__.py"

[tool.hatch.build]
include = [
    "/paktrack",
]
